css/styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  background: #454545;
  color: #e4fde1;
}

#main-grid {
  display: grid;
  grid-template-columns: 1fr;
}

header {
  position: fixed;
  width: 100%;
}

.navbar {
  width: 100%;
  display: flex;
  justify-content: space-between;
  background-color: #759eb8;
}

#profile-picture-container {
  display: flex;
  margin: 0 auto;
  border: 1px solid red;
}

#profile-picture-container p {
  font-size: 3.1vw;
}

#profile-picture {
  margin: 0.2rem 0.4rem 0 0.4rem;
  justify-content: center;
  width: 13vw;
  border-radius: 50%;
}

.links-container {
  padding: 1em;
  max-width: 80vw;
  display: flex;
  flex-grow: 1;
  justify-content: space-around;
  align-items: center;
  column-gap: 0.85em;
  list-style: none;
  background-color: #85c7f19b;
}

.links-container a {
  font-size: 4vw;
}

.navbar a {
  text-decoration: none;
  color: #e4fde1;
  cursor: pointer;
}

.navbar a:hover {
  color: black;
}

.hero-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url(../images/hero2.jpg);
  height: 97vh;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  margin-top: 3rem;
  z-index: -1;
}

.hero-text {
  text-align: center;
  position: absolute;
  top: 47%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

.hero-text h1 {
  font-size: 12vw;
}

.hero-text p {
  font-size: 4vw;
}

section {
  display: block;
}

#about,
#projects,
#contact {
  width: 90%;
  margin: 0 auto;
  padding: 3rem;
  display: flex;
  flex-direction: column;
  border: 1px solid red;
}

.about-container {
  display: flex;
  flex-direction: column;
  border: 1px solid red;
}

.about-container img {
  width: 30vw;
  margin: 0 auto;
}

#about h2,
#projects h2,
#contact h2 {
  text-align: center;
  text-decoration: underline;
}

#about p,
#projects h3 {
  padding: 1.5rem 0;
  margin: 0 auto;
}

/* Desktop */
@media only screen and (min-width: 992px) {
}

.project-container img {
  width: 55vw;
  padding-bottom: 2rem;
}

.project-container p {
  padding-bottom: 1rem;
}

